--- a/css/style.less
+++ b/css/style.less
@@ -630,7 +630,7 @@ header {
 }
 
 footer {
-	background-image: url('/img/footer-gradient-background.png');
+	background-image: url('./img/footer-gradient-background.png');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
